control for rotary axis in widget configuration

--- a/src/app/modal-widget/modal-widget.component.html
+++ b/src/app/modal-widget/modal-widget.component.html
@@ -309,6 +309,13 @@
             </p>
             <p>
                 <mat-checkbox
+                  formControlName="rotaryAxis"
+                  name="rotaryAxis">
+                    Value axis is circular. E.g. Compass
+                </mat-checkbox>
+            </p>
+            <p>
+                <mat-checkbox
                   formControlName="invertData"
                   name="invertData">
                     Invert Data (multiply by -1)
