--- a/src/app/widget-config/modal-widget-config/modal-widget-config.component.html
+++ b/src/app/widget-config/modal-widget-config/modal-widget-config.component.html
@@ -370,6 +370,12 @@
               name="includeZero">
                 Y axis always start from zero
             </mat-checkbox>
+	    <mat-checkbox
+              formControlName="rotaryAxis"
+              name="rotaryAxis">
+                Rotary axis e.g. compass
+            </mat-checkbox>
+
           </div>
         </div>
       </mat-tab>
